--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -19,45 +19,45 @@ ZMK_COMBO(star,        &kp STAR,       RT3 RM3,    WIN MAC NAV NUM, COMBO_TERM_S
 ZMK_COMBO(bslh,        &kp BSLH,       LM3 LB3,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rbkt,        &kp RBKT,       LM2 LB2,    WIN MAC NAV    , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(lbkt,        &kp LBKT,       LM1 LB1,    WIN MAC NAV	  , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mk5,         &mkp MB5,       LM3 LB3,    NUM		  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mk5,         &mkp MB5,       LM3 LB3,    NUM			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mk4,         &mkp MB4,       LM2 LB2,    NUM	    	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(mk3,         &mkp MB3,       LM1 LB1,    NUM  	  , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lmb0,        &trans,         LM0 LB0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mk3,         &mkp MB3,       LM1 LB1,    NUM			  , COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(lmb0,        &kp ESC,        LM0 LB0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(pipe,        &kp PIPE,       RM0 RB0,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(lpar,	       &kp LPAR,       RM1 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rpar,        &kp RPAR,       RM2 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(fslh,        &kp FSLH,       RM3 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Top */ 
-ZMK_COMBO(cprev,       &kp C_PREV,     LT3 LT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(cpp,         &kp C_PP,       LT2 LT1,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(cnext,       &kp C_NEXT,     LT1 LT0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rt12,        &trans,         RT1 RT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(cnext,       &kp C_NEXT,     LT3 LT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(win_undo,    &kp LC(Z),      LT2 LT1,    WIN ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mac_undo,    &kp LG(Z),      LT2 LT1,    MAC ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(win_redo,    &kp LC(Y),      LT1 LT0,    WIN ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mac_redo,    &kp LG(Y),      LT1 LT0,    MAC ,    	    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rt01,        &trans,         RT0 RT1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(voldn,       &kp C_VOL_DN,   RT1 RT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(volup,       &kp C_VOL_UP,   RT2 RT3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Middle */ 
-ZMK_COMBO(win_redo,    &kp LC(Y),      LM3 LM2,    WIN ,	    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(mac_redo,    &kp LG(Y),      LM3 LM2,    MAC ,    	    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(win_undo,    &kp LC(Z),      LM2 LM1,    WIN ,	    COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mac_undo,    &kp LG(Z),      LM2 LM1,    MAC ,	    COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(tab,         &kp TAB,        LM1 LM0,    WIN MAC NAV ,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(cpp,         &kp C_PP,       LM3 LM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(esc,	       &kp ESC,        LM2 LM1,    WIN MAC NAV NUM,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(tab,         &kp TAB,        LM1 LM0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(minus,       &kp MINUS,      RM0 RM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(qexcl,       &qexcl,         RM1 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(caret,       &kp CARET,      RM2 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Bottom */
-ZMK_COMBO(win_cut,     &kp LC(X),      LB3 LB2,    WIN ,	    COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(win_cut,     &kp LC(X),      LB3 LB2,    WIN ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mac_cut,     &kp LG(X),      LB3 LB2,    MAC ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(win_copy,    &kp LC(INS),    LB2 LB1,    WIN ,            COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(win_paste,   &kp LS(INS),    LB1 LB0,    WIN ,	    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(mac_cut,     &kp LG(X),      LB3 LB2,    MAC ,	    COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(win_paste,   &kp LS(INS),    LB1 LB0,    WIN ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mac_copy,    &kp LG(C),      LB2 LB1,    MAC ,            COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(mac_paste,   &kp LG(V),      LB1 LB0,    MAC ,	    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mac_paste,   &kp LG(V),      LB1 LB0,    MAC ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(under,       &kp UNDER,      RB0 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(lbrc,        &kp LBRC,       RB1 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rbrc,        &kp RBRC,       RB2 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Thumb combos */  
-ZMK_COMBO(grave,       &kp GRAVE,      LH1 LH0,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(tilde,       &kp TILDE,      RH0 RH1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(func_grave,  &lt FN GRAVE,   LH1 LH0,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(func_enter,  &lt FN ENTER,   RH0 RH1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
