--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -29,18 +29,17 @@ ZMK_COMBO(rpar,        &kp RPAR,       RM2 RB2,    WIN MAC NAV NUM, COMBO_TERM_S
 ZMK_COMBO(fslh,        &kp FSLH,       RM3 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Top */ 
-ZMK_COMBO(cprev,       &kp C_PREV,     LT3 LT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(cpp,         &kp C_PP,       LT2 LT1,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(cnext,       &kp C_NEXT,     LT1 LT0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(cnext,       &kp C_NEXT,     LT3 LT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(win_undo,    &kp LC(Z),      LT2 LT1,    WIN ,	    COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mac_undo,    &kp LG(Z),      LT2 LT1,    MAC ,	    COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(win_redo,    &kp LC(Y),      LT1 LT0,    WIN ,	    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mac_redo,    &kp LG(Y),      LT1 LT0,    MAC ,    	    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rt12,        &trans,         RT1 RT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(voldn,       &kp C_VOL_DN,   RT1 RT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(volup,       &kp C_VOL_UP,   RT2 RT3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Middle */ 
-ZMK_COMBO(win_redo,    &kp LC(Y),      LM3 LM2,    WIN ,	    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(mac_redo,    &kp LG(Y),      LM3 LM2,    MAC ,    	    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(win_undo,    &kp LC(Z),      LM2 LM1,    WIN ,	    COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mac_undo,    &kp LG(Z),      LM2 LM1,    MAC ,	    COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cpp,         &kp C_PP,       LM3 LM2,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(tab,         &kp TAB,        LM1 LM0,    WIN MAC NAV ,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(minus,       &kp MINUS,      RM0 RM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(qexcl,       &qexcl,         RM1 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
