--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -14,37 +14,43 @@
 #define COMBO_IDLE_FAST 150
 #define COMBO_IDLE_SLOW 50
 
-/* Vertical Left */ 
-ZMK_COMBO(sqt,         &kp SQT,        LT3 LM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lt,          &kp LT,         LT2 LM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(gt,          &kp GT,         LT1 LM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(dqt,         &kp DQT,        LT0 LM0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(star,        &kp STAR,       LM3 LB3,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(plus,        &kp PLUS,       LM2 LB2,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+/* Vertical Left       */  
+ZMK_COMBO(star,        &kp STAR,       LT3 LM3,    WIN MAC NAV    , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(sqt,         &kp SQT,        LT2 LM2,    WIN MAC NAV    , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(plus,        &kp PLUS,       LT1 LM1,    WIN MAC NAV    , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(tilde,       &kp TILDE,      LT0 LM0,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lt,          &kp LT,         LM3 LB3,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(grave,       &kp GRAVE,      LM2 LB2,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(equal,       &kp EQUAL,	   LM1 LB1,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(qexcl,	   &qexcl,	       LM0 LB0,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(gt,	       &kp GT,	       LM0 LB0,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
-/* Vertical Right,  */
+/* Vertical Right,     */
 ZMK_COMBO(pipe,        &kp PIPE,       RT0 RM0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lbrc,        &kp LBRC,       RT1 RM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rbrc,        &kp RBRC,       RT2 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lbkt,        &kp LBKT,       RT1 RM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rbkt,        &kp RBKT,       RT2 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(amps,        &kp AMPS,       RT3 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(bslh,        &kp BSLH,       RM0 RB0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lpar,	       &kp LPAR,       RM1 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rpar,        &kp RPAR,       RM2 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lparlt,	   &lpar_lt,       RM1 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rpargt,      &rpar_gt,       RM2 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(fslh,        &kp FSLH,       RM3 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Num Layer */
-ZMK_COMBO(smartmouse,  &smart_mouse	,  LM1 LM0,    NUM			  ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(nlt3,        &none,          LT3 LM3,    NUM  	      , COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(nlt2,        &none,          LT2 LM2,    NUM  	      , COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(nesc,        &kp ESC,        LT1 LM1,    NUM  	      , COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(nlt0,        &none,          LT0 LM0,    NUM  	      , COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(mk5,         &mkp MB5,       LM3 LB3,    NUM			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mk4,         &mkp MB4,       LM2 LB2,    NUM			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mk3,         &mkp MB3,       LM1 LB1,    NUM  	      , COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(nlb0,        &none,          LM0 LB0,    NUM  	      , COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(smartmouse,  &smart_mouse	,  LM1 LM0,    NUM			  ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Horizontal  Left    */ 
-ZMK_COMBO(at,          &kp AT,         LM3 LM2,    WIN MAC NAV    ,	COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(hash,        &kp HASH,       LM2 LM1,    WIN MAC NAV    ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(hash,        &kp HASH,       LM3 LM2,    WIN MAC NAV    ,	COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(at,          &kp AT,         LM2 LM1,    WIN MAC NAV    ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(tab,         &kp TAB,        LM1 LM0,    WIN MAC NAV    , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lb32,        &none,          LB3 LB2,    MAC ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mac_undo,    &kp LG(Z),      LB3 LB2,    MAC ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(win_undo,    &kp LC(Z),      LB3 LB2,    WIN ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(mac_copy,    &kp LG(C),      LB2 LB1,    MAC ,		    COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(win_copy,    &kp LC(INS),    LB2 LB1,    WIN ,		    COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(mac_paste,   &kp LG(V),      LB1 LB0,    MAC ,	        COMBO_TERM_FAST, COMBO_IDLE_FAST)
@@ -57,12 +63,13 @@ ZMK_COMBO(prcnt,       &kp PRCNT,      RM2 RM3,    WIN MAC NAV NUM, COMBO_TERM_S
 ZMK_COMBO(under,       &kp UNDER,      RB0 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(lbrc,        &kp LBRC,       RB1 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rbrc,        &kp RBRC,       RB2 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-
+	
 /* Thumb combos */  
-ZMK_COMBO(flow,        &kp LA(SPACE),  LH2 LH1,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(grave,       &kp GRAVE,      LH1 LH0,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(tilde,       &kp TILDE,      RH0 RH1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rh12,        &trans,         RH1 RH2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mac_redo,    &kp LG(Y),      LH2 LH1,    MAC ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(win_redo,    &kp LC(Y),      LH2 LH1,    WIN ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(flow,		   &kp LA(SPACE),  LH1 LH0,    WIN MAC NAV	  ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dot_morph,   &dot_morph,     RH0 RH1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rh12,        &none,		   RH1 RH2,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 
 
